Fixed ads size on mobile

--- a/src/components/UI/Ads/Ads.module.css
+++ b/src/components/UI/Ads/Ads.module.css
@@ -8,3 +8,16 @@
 .adsContainer{
     background-color: #000000;
 }
+
+
+@media screen and (max-width: 768px){
+	.ads {
+		height:100px;
+	}
+}
+
+@media screen and (max-width: 576px){
+	.ads {		
+		height:80px;
+	}
+}
